edit the config.yaml file ,edit main.py script

--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,11 @@
 credentials:
   usernames:
     Khadija:
-      email: Khadija@gmail.com
+      email: deedahahmed01@gmail.com
       logged_in: False # Will be managed automatically
       name: Khadija
       password: '123' # Make sure to enclose in quotes
-    Angel:
-      email: Angel@gmail.com
-      logged_in: False # Will be managed automatically
-      name: Angel
-      password: '123' # Make sure to enclose in quotes
+    
 cookie:
   expiry_days: 30
   key: some_signature_key # Must be string
